---
0.1
---

[jan] Add Spanish translation (Manuel P. Ayala <mayala@unex.es>).
[mjr] Add initial database migration.
[jan] Add Finnish translation (Leena Heino <liinu@uta.fi>).
[jan] Add Latvian translation (Jānis Eisaks <jancs@dv.lv>).
[jan] Provide default configuration files instead of .dist versions.